Implemented simple sound test

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
-<div>
-    <p>Hello World, I work!</p>
+<div class="container-fluid">
+    <button type="button" class="btn btn-primary" id="nyanbutton" >Click for Sound!</button>
+    <button type="button" class="btn btn-danger" id="shutupbutton" >Shut up!</button>
 </div>
+
+<link rel="stylesheet" href="/style/index.css">
+<script src="/js/index.js"></script>
