--- a/public/style/index.css
+++ b/public/style/index.css
@@ -9,6 +9,68 @@
     border-radius: 50%;
 }
 
+.table-container {
+    background:rgba(213, 222, 235, 0.8);
+    border-width: 3px;
+    border-style: solid;
+    border-color: rgba(213, 222, 235, 0.8);
+    border-radius: 4px;
+    background-clip: padding-box;
+    display: inline-block;
+}
+
+#music-grid-container {
+    width:100%;
+    overflow:scroll;
+}
+
+.playpause{
+    display: inline-block;
+}
+
+.playpause input {
+   display: none;
+}
+
+.playpause.pause {
+    border-style: double;
+    border-width: 0 0 0 20px;
+    transition: 100ms all ease;
+    height: 25px;
+    cursor: pointer;
+    border-color: transparent transparent transparent #f0ad4e;
+}
+
+.playpause.play {
+    box-sizing: border-box;
+    width: 0;
+    height: 25px;
+    border-color: transparent transparent transparent #5cb85c;
+    transition: 100ms all ease;
+    cursor: pointer;
+    border-style: solid;
+    border-width: 12px 0 12px 20px;
+    margin: 0;
+}
+
+.controls{
+    display: inline-flex;
+    background:rgba(213, 222, 235, 0.8);
+    background-clip:  padding-box;
+    border-width: 3px 3px 0px 3px;
+    border-style: solid;
+    border-color: rgba(213, 222, 235, 0.8);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    margin-left: 20px;
+    padding: 0.5em;
+}
+
+#rowcontroller {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
 .scale-in-center{animation:scale-in-center.2s cubic-bezier(.25,.46,.45,.94) both}
 @keyframes scale-in-center{0%{transform:scale(0);opacity:1}100%{transform:scale(1);opacity:1}}
 
