--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/superhero/bootstrap.min.css" crossorigin="anonymous">
+        <link href="/fonts/open-iconic-bootstrap.min.css" rel="stylesheet">
 
         <title>Music&Go</title>
     </head>
