--- a/views/piano.hbs
+++ b/views/piano.hbs
@@ -1,46 +1,66 @@
 <div class="container-fluid">
-
     <div>
-            <div style="width:100%;height:0">
+        <div style="width:100%;height:0">
+            <div class="nowplaying"></div>
+            <div class="keys">
                 <ul class="set">
-                    <li class="white c"></li>
-                    <li class="black cs"></li>
-                    <li class="white d"></li>
-                    <li class="black ds"></li>
-                    <li class="white e"></li>
-                    <li class="white f"></li>
-                    <li class="black fs"></li>
-                    <li class="white g"></li>
-                    <li class="black gs"></li>
-                    <li class="white a"></li>
-                    <li class="black as"></li>
-                    <li class="white b"></li>
-                    <li class="white c"></li>
-                    <li class="black cs"></li>
-                    <li class="white d"></li>
-                    <li class="black ds"></li>
-                    <li class="white e"></li>
-                    <li class="white f"></li>
-                    <li class="black fs"></li>
-                    <li class="white g"></li>
-                    <li class="black gs"></li>
-                    <li class="white a"></li>
-                    <li class="black as"></li>
-                    <li class="white b"></li>
-                    <li class="white c"></li>
-                    <li class="black cs"></li>
-                    <li class="white d"></li>
-                    <li class="black ds"></li>
-                    <li class="white e"></li>
-                    <li class="white f"></li>
-                    <li class="black fs"></li>
-                    <li class="white g"></li>
-                    <li class="black gs"></li>
-                    <li class="white a"></li>
+                    <li data-key="65" class="white key"</li>
+                    <li data-key="87" class="black cs key sharp"></li>
+                    <li data-key="83" class="white d key"></li>
+                    <li data-key="69" class="black ds key sharp"></li>
+                    <li data-key="68" class="white e key"></li>
+                    <li data-key="70" class="white f key"></li>
+                    <li data-key="84" class="black fs key sharp"></li>
+                    <li data-key="71" class="white g key"></li>
+                    <li data-key="89" class="black gs key sharp"></li>
+                    <li data-key="72" class="white a key"></li>
+                    <li data-key="85" class="black as key sharp"></li>
+                    <li data-key="74" class="white b key"></li>
+                    <li data-key="75" class="white c key"></li>
+                    <li data-key="79" class="black cs key sharp"></li>
+                    <li data-key="76" class="white d key"></li>
+                    <li data-key="80" class="black ds key sharp"></li>
+                    <li data-key="186" class="white e key"></li>
+                    <li data-key="85" class="white f key"></li>
+                    <li data-key="85" class="black fs key sharp"></li>
+                    <li data-key="85" class="white g key"></li>
+                    <li data-key="85" class="black gs key sharp"></li>
+                    <li data-key="85" class="white a key"></li>
+                    <li data-key="85" class="black as key sharp"></li>
+                    <li data-key="85" class="white b key"></li>
+                    <li data-key="85" class="white c key"></li>
+                    <li class="black cs key sharp"></li>
+                    <li class="white d key"></li>
+                    <li class="black ds key sharp"></li>
+                    <li class="white e key"></li>
+                    <li class="white f key"></li>
+                    <li class="black fs key sharp"></li>
+                    <li class="white g key"></li>
+                    <li class="black gs key sharp"></li>
+                    <li class="white a key"></li>
                 </ul>
             </div>
         </div>
+        <audio data-key="65" src="http://carolinegabriel.com/demo/js-keyboard/sounds/040.wav"></audio>
+        <audio data-key="87" src="http://carolinegabriel.com/demo/js-keyboard/sounds/041.wav"></audio>
+        <audio data-key="83" src="http://carolinegabriel.com/demo/js-keyboard/sounds/042.wav"></audio>
+        <audio data-key="69" src="http://carolinegabriel.com/demo/js-keyboard/sounds/043.wav"></audio>
+        <audio data-key="68" src="http://carolinegabriel.com/demo/js-keyboard/sounds/044.wav"></audio>
+        <audio data-key="70" src="http://carolinegabriel.com/demo/js-keyboard/sounds/045.wav"></audio>
+        <audio data-key="84" src="http://carolinegabriel.com/demo/js-keyboard/sounds/046.wav"></audio>
+        <audio data-key="71" src="http://carolinegabriel.com/demo/js-keyboard/sounds/047.wav"></audio>
+        <audio data-key="89" src="http://carolinegabriel.com/demo/js-keyboard/sounds/048.wav"></audio>
+        <audio data-key="72" src="http://carolinegabriel.com/demo/js-keyboard/sounds/049.wav"></audio>
+        <audio data-key="85" src="http://carolinegabriel.com/demo/js-keyboard/sounds/050.wav"></audio>
+        <audio data-key="74" src="http://carolinegabriel.com/demo/js-keyboard/sounds/051.wav"></audio>
+        <audio data-key="75" src="http://carolinegabriel.com/demo/js-keyboard/sounds/052.wav"></audio>
+        <audio data-key="79" src="http://carolinegabriel.com/demo/js-keyboard/sounds/053.wav"></audio>
+        <audio data-key="76" src="http://carolinegabriel.com/demo/js-keyboard/sounds/054.wav"></audio>
+        <audio data-key="80" src="http://carolinegabriel.com/demo/js-keyboard/sounds/055.wav"></audio>
+        <audio data-key="186" src="http://carolinegabriel.com/demo/js-keyboard/sounds/056.wav"></audio>
     </div>
 </div>
 
+
 <link rel="stylesheet" href="/style/piano.css">
+<script src="/js/piano.js"></script>
