--- a/public/style/index.css
+++ b/public/style/index.css
@@ -12,7 +12,16 @@
 
 .container-fluid{
     overflow: hidden;
+    width: 100%;
     padding: 2em;
+}
+
+#music-grid-container {
+    overflow:scroll;
+}
+
+#music-grid {
+    background: rgba(213, 222, 235, 0.8);
 }
 
 .cellOfMisery{
@@ -21,17 +30,14 @@
 }
 
 .table-container {
-    background:rgba(213, 222, 235, 0.8);
+    background:rgba(114, 119, 126, 0.8);
     border-width: 3px;
     border-style: solid;
-    border-color: rgba(213, 222, 235, 0.8);
+    border-color: rgba(114, 119, 126, 0.8);
     border-radius: 4px;
     background-clip: padding-box;
     display: inline-block;
-}
-
-#music-grid-container {
-    overflow:scroll;
+    width:100%;
 }
 
 .playpause{
@@ -72,11 +78,11 @@
 
 .controls{
     display: inline-flex;
-    background:rgba(213, 222, 235, 0.8);
+    background:rgba(114, 119, 126, 0.8);
     background-clip:  padding-box;
     border-width: 3px 3px 0px 3px;
     border-style: solid;
-    border-color: rgba(213, 222, 235, 0.8);
+    border-color: rgba(114, 119, 126, 0.8);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-left: 20px;
@@ -85,11 +91,11 @@
 
 .newInstrumentContainer{
     display: inline-flex;
-    background:rgba(213, 222, 235, 0.8);
+    background:rgba(114, 119, 126, 0.8);
     background-clip:  padding-box;
     border-width: 3px 3px 0px 3px;
     border-style: solid;
-    border-color: rgba(213, 222, 235, 0.8);
+    border-color: rgba(114, 119, 126, 0.8);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     margin-left: 20px;
