--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,69 +44,39 @@
             <span class="oi oi-trash"></span>
             Delete Last Instrument
         </button>
+        <button data-toggle="modal" data-target="#configureMIDIInputs" style="margin-left: 0.5em" type="button" class="btn btn-warning">
+            <strong>+</strong> Configure MIDI Input
+        </button>
     </div>
 </div>
 
-<div class="container-fluid">
-    <div>
-        <div style="width:100%;height:0">
-            <div class="nowplaying"></div>
-            <div class="keys">
-                <ul class="set">
-                    <li data-key="65" class="white key"></li>
-                    <li data-key="87" class="black cs key sharp"></li>
-                    <li data-key="83" class="white d key"></li>
-                    <li data-key="69" class="black ds key sharp"></li>
-                    <li data-key="68" class="white e key"></li>
-                    <li data-key="70" class="white f key"></li>
-                    <li data-key="84" class="black fs key sharp"></li>
-                    <li data-key="71" class="white g key"></li>
-                    <li data-key="89" class="black gs key sharp"></li>
-                    <li data-key="72" class="white a key"></li>
-                    <li data-key="85" class="black as key sharp"></li>
-                    <li data-key="74" class="white b key"></li>
-                    <li data-key="75" class="white c key"></li>
-                    <li data-key="79" class="black cs key sharp"></li>
-                    <li data-key="76" class="white d key"></li>
-                    <li data-key="80" class="black ds key sharp"></li>
-                    <li data-key="186" class="white e key"></li>
-                    <li data-key="85" class="white f key"></li>
-                    <li data-key="85" class="black fs key sharp"></li>
-                    <li data-key="85" class="white g key"></li>
-                    <li data-key="85" class="black gs key sharp"></li>
-                    <li data-key="85" class="white a key"></li>
-                    <li data-key="85" class="black as key sharp"></li>
-                    <li data-key="85" class="white b key"></li>
-                    <li data-key="85" class="white c key"></li>
-                    <li class="black cs key sharp"></li>
-                    <li class="white d key"></li>
-                    <li class="black ds key sharp"></li>
-                    <li class="white e key"></li>
-                    <li class="white f key"></li>
-                    <li class="black fs key sharp"></li>
-                    <li class="white g key"></li>
-                    <li class="black gs key sharp"></li>
-                    <li class="white a key"></li>
-                </ul>
+<div class="modal fade" id="configureMIDIInputs" tabindex="-1" role="dialog" aria-labelledby="configureMIDIInputsTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="configureMIDIInputsTitle">Configure MIDI Inputs</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <button type="button" class="btn btn-success" id="toggleMIDIInput">
+                    Enable MIDI Input
+                </button>
+                <div class="collapse" id="midiForm">
+                    <span>Select Input Source:</span>
+                    <select class="custom-select" id="MIDIInputSelect">
+                        <option selected value="0">None</option>
+                    </select>
+                    <input type="checkbox" id="polyphonic">
+                    <label for="polyphonic">Polyphonic</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
-        <audio data-key="65" src="http://carolinegabriel.com/demo/js-keyboard/sounds/040.wav"></audio>
-        <audio data-key="87" src="http://carolinegabriel.com/demo/js-keyboard/sounds/041.wav"></audio>
-        <audio data-key="83" src="http://carolinegabriel.com/demo/js-keyboard/sounds/042.wav"></audio>
-        <audio data-key="69" src="http://carolinegabriel.com/demo/js-keyboard/sounds/043.wav"></audio>
-        <audio data-key="68" src="http://carolinegabriel.com/demo/js-keyboard/sounds/044.wav"></audio>
-        <audio data-key="70" src="http://carolinegabriel.com/demo/js-keyboard/sounds/045.wav"></audio>
-        <audio data-key="84" src="http://carolinegabriel.com/demo/js-keyboard/sounds/046.wav"></audio>
-        <audio data-key="71" src="http://carolinegabriel.com/demo/js-keyboard/sounds/047.wav"></audio>
-        <audio data-key="89" src="http://carolinegabriel.com/demo/js-keyboard/sounds/048.wav"></audio>
-        <audio data-key="72" src="http://carolinegabriel.com/demo/js-keyboard/sounds/049.wav"></audio>
-        <audio data-key="85" src="http://carolinegabriel.com/demo/js-keyboard/sounds/050.wav"></audio>
-        <audio data-key="74" src="http://carolinegabriel.com/demo/js-keyboard/sounds/051.wav"></audio>
-        <audio data-key="75" src="http://carolinegabriel.com/demo/js-keyboard/sounds/052.wav"></audio>
-        <audio data-key="79" src="http://carolinegabriel.com/demo/js-keyboard/sounds/053.wav"></audio>
-        <audio data-key="76" src="http://carolinegabriel.com/demo/js-keyboard/sounds/054.wav"></audio>
-        <audio data-key="80" src="http://carolinegabriel.com/demo/js-keyboard/sounds/055.wav"></audio>
-        <audio data-key="186" src="http://carolinegabriel.com/demo/js-keyboard/sounds/056.wav"></audio>
     </div>
 </div>
 
