--- a/views/index.hbs
+++ b/views/index.hbs
@@ -113,23 +113,33 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div style="display:flex; justify-content:space-between;margin-bottom:1em;align-items:center">
-                    <span for="qualityPresets">Wave Speed</span>
-                    <input type="range" min="0.01" max="3" value="1" step="0.01" class="slider" id="waveSpeed">
+                <div style="display:flex; justify-content:space-between;margin-bottom:1em;align-items:center;">
+                    <span for="waveSpeed">Wave Speed</span>
+                    <div>
+                        <input type="range" min="0.01" max="3" value="1" step="0.01" class="slider" id="waveSpeed">
+                        <span id="speedMultiplier">x1.00</span>
+                    </div>
                 </div>
-                <div style="display:flex; justify-content:space-between;margin-bottom:1em;align-items:center">
-                    <span for="qualityPresets">Wave Size</span>
-                    <input type="range" min="0.01" max="5" value="1" step="0.02" class="slider" id="waveSize">
+                <div style="display:flex; justify-content:space-between;margin-bottom:1em;align-items:center;">
+                    <span for="waveSize">Wave Size</span>
+                    <div>
+                        <input type="range" min="0.25" max="5" value="1" step="0.25" class="slider" id="waveSize">
+                        <span id="sizeMultiplier">x1.00</span>
+                    </div>
                 </div>
-                <div style="display:flex; justify-content:space-between; align-items:center">
+                <div style="display:flex; justify-content:space-between;margin-bottom:1em; align-items:center;">
                     <span for="qualityPresets">Wave Render Quality</span>
-                        <select class="custom-select" id="qualityPresets" style="width:10em">
+                        <select class="custom-select form-control" id="qualityPresets" style="width:10em">
                             <option value="5">Highest</option>
                             <option value="4">High</option>
                             <option selected value="3">Medium</option>
                             <option value="2">Low</option>
                             <option value="1">Very Low</option>
                         </select>
+                </div>
+                <div style="display:flex; justify-content:space-between; align-items:center;">
+                    <span for="maxWaves">Maximum Pure Waves</span>
+                    <input type="number" class="form-control" min="1" max="10" value="4" id="maxWaves" style="width:10em;" onkeydown="return false"/>
                 </div>
             </div>
             <div class="modal-footer">
@@ -314,3 +324,4 @@
 
 <link rel="stylesheet" href="/style/index.css">
 <script src="/js/index.js"></script>
+<script src="/js/piano.js"></script>
