--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -16,7 +16,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/webmidi@2.3.3"></script>
-        <script src="https://unpkg.com/tone"></script>
+        <script src="https://unpkg.com/tone@13.4.9/build/Tone.js"></script>
         <script src="/js/p5/p5.min.js"></script>
         <script src="/js/p5/addons/p5.dom.min.js"></script>
         <script src="/js/p5/addons/p5.sound.min.js"></script>
