--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="nav-content"> 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="exporting">Exporting</a>
+                <a class="nav-link" data-toggle="modal" data-target="#exporting" href="#">Exporting</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="tutorial">Tutorial</a>
@@ -116,6 +116,26 @@
                     <input type="checkbox" id="polyphonic">
                     <label for="polyphonic">Polyphonic</label>
                 </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="exporting" tabindex="-1" role="dialog" aria-labelledby="exportingTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="exportingTitle">Exporting</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Cenas
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
