--- a/views/about.hbs
+++ b/views/about.hbs
@@ -26,8 +26,8 @@
 </header>
 
 <div class="description">
-    <h3>Get to know the people behind Music&amp;Go!</h3>
-    <p class="pres">We are three aspiring engineers who are currently taking a Master's Degree in Informatics and
+    <h3>Get to know the people behind Music&amp;Go.</h3>
+    <p class="pres">We are three students who are currently taking a Master's Degree in Informatics and
         Computing Engineering at FEUP.</p>
 </div>
 
@@ -43,14 +43,14 @@
         <figure>
             <img src="../images/claudia.jpg" alt="David Reis">
             <figcaption class="font-weight-bold">David Reis</figcaption>
-            <p class="contacts">up2016xxxxx@fe.up.pt</p>
+            <p class="contacts">up201607927@fe.up.pt</p>
         </figure>
     </div>
     <div class="inner">
         <figure>
             <img src="../images/claudia.jpg" alt="Marisa Oliveira">
             <figcaption class="font-weight-bold">Marisa Oliveira</figcaption>
-            <p class="contacts">up201xxxxxx@fe.up.pt</p>
+            <p class="contacts">up201308594@fe.up.pt</p>
         </figure>
     </div>
 </div>
