--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,8 @@
     <!-- Brand -->
     <!--<a class="navbar-brand" href="#">Logo</a>-->
 
-    <a class="logo" href="#"><img src="../images/logo.png" width="45px" height="45px" alt="LOGO"></a>
+    <!--<a class="logo" href="#"><img src="../images/logo.png" width="45px" height="45px" alt="LOGO"></a>-->
+    <a class="logo" href="#">Music&amp;Go</a>
 
     <!-- Links -->
     <div class="collapse navbar-collapse justify-content-end" id="nav-content">
@@ -32,7 +33,7 @@
 </header>
 
 <div class="container">
-  <a href="app" class="btn btn-default btn-lg active" role="button">Create</a>
+  <a href="app" class="btn btn-default btn-lg active" role="button"><span>Create</span></a>
 </div>
 
 <div class="instruments">
