--- a/views/index.hbs
+++ b/views/index.hbs
@@ -135,7 +135,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                Cenas
+                Want to record and share your beats?
+                <p><p>You can use <a href="https://chrome.google.com/webstore/detail/chrome-audio-capture/kfokdmfpdnokpmpbjhjbcabgligoelgp"><strong>this extension</strong></a> to record audio created in our website.</p></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
