--- a/public/style/index.css
+++ b/public/style/index.css
@@ -18,7 +18,15 @@ body{
 .square{
     height: 50px;
     width: 50px;
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(228,45,253,1) 100%);
+    /*background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(228,45,253,1) 100%);*/
+    /*background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(180,230,100,1) 100%);*/
+    background: linear-gradient(0deg, rgba(240,173,78,1) 33%, rgba(217,83,79,1) 66%, rgba(223,105,26,1) 100%);
+
+    /*background: linear-gradient(0deg, rgba(180,230,100,1) 0%, rgba(217,83,79,1) 100%);*/
+
+
+
+
     border-radius: 50%;
 }
 
