--- a/public/style/piano.css
+++ b/public/style/piano.css
@@ -48,3 +48,9 @@ li { margin:0; padding:0; list-style:none; position:relative; float:left; }
 .a,.g,.d,.e, .b { margin:0 0 0 -1em;  }
 .set li:first-child { border-radius:5px 0 5px 5px; }
 .set li:last-child { border-radius:0 5px 5px 5px; }
+
+.navbar {
+    padding: 20px;
+    font-size: 25px;
+    font-weight: bold;
+}
