Changed default synth to polysynth

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -113,7 +113,7 @@
                     <select class="custom-select" id="MIDIInputSelect">
                         <option selected value="0">None</option>
                     </select>
-                    <input type="checkbox" id="polyphonic">
+                    <input type="checkbox" id="polyphonic" checked>
                     <label for="polyphonic">Polyphonic</label>
                 </div>
             </div>
