--- a/views/index.hbs
+++ b/views/index.hbs
@@ -109,12 +109,21 @@
                     Enable MIDI Input
                 </button>
                 <div class="collapse" id="midiForm">
-                    <span>Select Input Source:</span>
-                    <select class="custom-select" id="MIDIInputSelect">
+                    <span style="margin-top: 1em">Select Input Source:</span>
+                    <select class="custom-select" id="MIDIInputSelect" style="margin-bottom: 1em">
                         <option selected value="0">None</option>
                     </select>
                     <input type="checkbox" id="polyphonic" checked>
-                    <label for="polyphonic">Polyphonic</label>
+                    <span for="polyphonic">Polyphonic</span>
+                    <br/>
+                    <span for="synthVolume">Synth Volume</span>
+                    <input type="range" min="-50" max="0" value="-25" step="0.05" class="slider" id="synthVolume">
+                    <br/>
+                    <span for="synthSettings">Synth Settings JSON</span>
+                    <textarea id="synthSettings" style="width: 100%; height: 15em"></textarea>
+                    <div class="collapse" id="invalidJSON" style="background:#d9534f;color:white;padding-left:1em;width:100%">
+                        Invalid JSON, will be discarded
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
