--- a/public/style/index.css
+++ b/public/style/index.css
@@ -15,18 +15,21 @@ body{
     font-weight: bold;
 }
 
+a.logo {
+    text-decoration: none;
+    font-size: 30px;
+    color: #d9534f;
+    font-weight: 400;
+}
+
+a.logo span {
+    color: #b4e664;
+}
+
 .square{
     height: 50px;
     width: 50px;
-    /*background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(228,45,253,1) 100%);*/
-    /*background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(180,230,100,1) 100%);*/
     background: linear-gradient(0deg, rgba(240,173,78,1) 33%, rgba(217,83,79,1) 66%, rgba(223,105,26,1) 100%);
-
-    /*background: linear-gradient(0deg, rgba(180,230,100,1) 0%, rgba(217,83,79,1) 100%);*/
-
-
-
-
     border-radius: 50%;
 }
 
@@ -47,7 +50,7 @@ body{
 }
 
 #music-grid {
-    background: rgba(213, 222, 235, 0.8);
+    background: #4e5d6c;
 }
 
 .cellOfMisery{
@@ -56,7 +59,7 @@ body{
 }
 
 .table-container {
-    background:rgba(114, 119, 126, 0.8);
+    background:#abb6c2;
     border-width: 3px;
     border-style: solid;
     border-color: rgba(114, 119, 126, 0.8);
