--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,15 +7,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="logo" href="/"><img src="../images/logo.png" width="45px" height="45px" alt="LOGO"></a>
+        <a class="logo" href="/"><i class="fas fa-headphones" style="color: #d9534f; font-size: 32px;"></i>
+            Music<span>&amp;Go</span></a>
 
         <div class="collapse navbar-collapse justify-content-end" id="nav-content">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="tutorial">Tutorial</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about">About Us</a>
+                    <a class="nav-link" href="about" style="color: black">About Us</a>
                 </li>
             </ul>
     </nav>
@@ -31,26 +29,62 @@
         Computing Engineering at FEUP.</p>
 </div>
 
-<div class="team-members">
+<!--<div class="team-members">
     <div class="inner">
         <figure>
-            <img src="../images/claudia.jpg" alt="Claudia Guedes">
-            <figcaption class="font-weight-bold">Claudia Guedes</figcaption>
+            <img src="../images/clauds.jpeg" alt="Cláudia Guedes">
+            <figcaption class="font-weight-bold">Cláudia Guedes</figcaption>
             <p class="contacts">up201505409@fe.up.pt</p>
+         
+
+
+
         </figure>
     </div>
     <div class="inner">
         <figure>
-            <img src="../images/claudia.jpg" alt="David Reis">
+            <img src="../images/davis.jpeg" alt="David Reis">
             <figcaption class="font-weight-bold">David Reis</figcaption>
             <p class="contacts">up201607927@fe.up.pt</p>
         </figure>
     </div>
     <div class="inner">
         <figure>
-            <img src="../images/claudia.jpg" alt="Marisa Oliveira">
+            <img src="../images/mars.jpeg" alt="Marisa Oliveira">
+            <figcaption class="font-weight-bold">Marisa Oliveira</figcaption>
+            <p class="contacts">up201308594@fe.up.pt</p>
+        </figure>
+    </div>
+</div>-->
+
+<div class="team-members">
+    <div class="inner">
+        <figure>
+            <img src="../images/clauds.jpeg" alt="Cláudia Guedes">
+            <figcaption class="font-weight-bold">Cláudia Guedes</figcaption>
+            <p class="contacts">up201505409@fe.up.pt</p>
+         
+
+
+
+        </figure>
+    </div>
+    <div class="inner">
+        <figure>
+            <img src="../images/davis.jpeg" alt="David Reis">
+            <figcaption class="font-weight-bold">David Reis</figcaption>
+            <p class="contacts">up201607927@fe.up.pt</p>
+        </figure>
+    </div>
+    <div class="inner">
+        <figure>
+            <img src="../images/mars.jpeg" alt="Marisa Oliveira">
             <figcaption class="font-weight-bold">Marisa Oliveira</figcaption>
             <p class="contacts">up201308594@fe.up.pt</p>
         </figure>
     </div>
 </div>
+
+
+
+
