--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/style/home.css">
 
+
 <header>
 
   <!-- OU https://www.w3schools.com/howto/howto_js_off-canvas.asp -->
@@ -14,16 +15,15 @@
     <!--<a class="navbar-brand" href="#">Logo</a>-->
 
     <!--<a class="logo" href="#"><img src="../images/logo.png" width="45px" height="45px" alt="LOGO"></a>-->
-    <a class="logo" href="#">Music&amp;Go</a>
+    <!--<i class="fas fa-music" style="color: #d9534f; font-size: 25px;"></i>-->
+
+<a class="logo" href="#"><i class="fas fa-headphones" style="color: #d9534f; font-size: 32px;"></i> Music<span>&amp;Go</span></a>
 
     <!-- Links -->
     <div class="collapse navbar-collapse justify-content-end" id="nav-content">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="tutorial">Tutorial</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about">About Us</a>
+          <a class="nav-link" href="about" style="color: black">About Us</a>
         </li>
       </ul>
   </nav>
