--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,18 +4,18 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <a class="logo" href="/"><img src="../images/logo.png" width="45px" height="45px" alt="LOGO"></a>
+    <a class="logo" href="/"><i class="fas fa-headphones" style="color: #d9534f; font-size: 32px;"></i> Music<span>&amp;Go</span></a>
 
     <div class="collapse navbar-collapse justify-content-end" id="nav-content"> 
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" data-toggle="modal" data-target="#exporting" href="#">Exporting</a>
+                <a class="nav-link" data-toggle="modal" data-target="#exporting" href="#" style="color: white">Exporting</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="modal" data-target="#tutorial" href="#">Tutorial</a>
+                <a class="nav-link" data-toggle="modal" data-target="#tutorial" href="#" style="color: white">Tutorial</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about">About Us</a>
+                <a class="nav-link" href="about" style="color: white">About Us</a>
             </li>
         </ul>
 </nav>
