--- a/public/style/home.css
+++ b/public/style/home.css
@@ -14,6 +14,7 @@ header {
 }
 
 a.logo {
+    text-shadow: 0.4px 0.4px 0.4px #000;
     text-decoration: none;
     font-size: 30px;
     color: #d9534f;
