--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="logo" href="/"><i class="fas fa-headphones" style="color: #d9534f; font-size: 32px;"></i>
+        <a class="logo" href="/" style="text-shadow: 0.4px 0.4px 0.4px #000;"><i class="fas fa-headphones" style="color: #d9534f; font-size: 32px;text-shadow: 0.4px 0.4px 0.4px #000;"></i>
             Music<span>&amp;Go</span></a>
 
         <div class="collapse navbar-collapse justify-content-end" id="nav-content">
